# os_lab

./: CMakeLists.txt  README.md  main.c  main.h
communication/: posix_mq.c  posix_shm.c  system_v_mq.c  system_v_shm.c  unix_fifo.c  unix_ipc.h  unix_pipe.c
mmap/: unix_mmap.c  unix_mmap.h
multi/: posix_thread.c  unix_multi.h  unix_process.c
scheduling/: alg_fifs.c  alg_sche.h
synchronization/: posix_bari.c  posix_cond.c  posix_mutex.c  posix_sem.c  posix_sem_n.c  system_v_sem.c  unix_sync.h
